清理死代码：移除未使用 imports、@OnMessage 注解、未使用变量 sequence、PlayList.getSnapshot/downloadSong/removeChangeListener
Co-authored-by: mangOdried <mangOdried@users.noreply.github.com>